--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/node": "^22.5.2",
-    "eslint": "^8.57.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.30.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.4"
   }
